# pythonProject12

./: .env.sample  .gitignore  category.json  groups.json  product.json  pyproject.toml
blogentry/: models.py  views.py
blogentry/migrations/: 0001_initial.py  0002_blog_sign_publication_alter_blog_slug.py  0003_blog_is_published.py
blogentry/templates/blogentry/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_rename_images_product_image.py  0002_version.py  0003_alter_product_image.py  0003_alter_version_product.py  0004_alter_version_current_version.py  0005_alter_version_version.py  0006_alter_version_number_version.py  0007_version_owner.py  0008_product_is_published.py  0009_alter_product_options.py  0010_product_owner.py
catalog/templates/: contacts.html  home.html  products.html
catalog/templates/catalog/: base.html  category_list.html  contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  products.html
catalog/templates/catalog/includes/: inc_menu.html
config/: settings.py  urls.py
users/: forms.py  models.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/: login.html
users/templates/users/: user_form.html
