[tool.poetry]
name = "pythonproject12"
version = "0.1.0"
description = ""
authors = ["VeniaminIllarionov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
psycopg2 = "^2.9.9"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
