[tool.poetry]
name = "pythonproject12"
version = "0.1.0"
description = ""
authors = ["VeniaminIllarionov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"
pillow = "^10.3.0"
ipython = "^8.24.0"
django-stubs = "^4.2"
pytils = "^0.4.1"
django = "4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
